--- a/index.html
+++ b/index.html
@@ -33,20 +33,22 @@
             </picture>
             <div class="image__overlay"></div>
         </div>
-        <div class="card__body">
-            <h1 class="heading">Get <span class="accent">insights</span> that help your business grow.</h1>
-            <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
-                experience, and overall efficiency.</p>
-        </div>
-        <div class="card__footer">
-            <div class="stat">
-                <span class="stat__number heading">10k+</span> <span class="stat__description">companies</span>
+        <div class="card__content">
+            <div class="card__body">
+                <h1 class="heading">Get <span class="accent">insights</span> that help your business grow.</h1>
+                <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+                    experience, and overall efficiency.</p>
             </div>
-            <div class="stat">
-                <span class="stat__number heading">314</span> <span class="stat__description">templates</span>
-            </div>
-            <div class="stat">
-                <span class="stat__number heading">12M+</span> <span class="stat__description">queries</span>
+            <div class="card__footer">
+                <div class="stat">
+                    <span class="stat__number heading">10k+</span> <span class="stat__description">companies</span>
+                </div>
+                <div class="stat">
+                    <span class="stat__number heading">314</span> <span class="stat__description">templates</span>
+                </div>
+                <div class="stat">
+                    <span class="stat__number heading">12M+</span> <span class="stat__description">queries</span>
+                </div>
             </div>
         </div>
     </div>
